# Argentix-Public-Version

./: README.md
Project/: CMakeLists.txt
Project/argentix/: ARGENTIX.hpp
Project/argentix/jtag/: mik32.cfg  mikron-link.cfg
Project/argentix/loaders/eeprom_loader/: eeprom-loader.py
Project/argentix/standard_libraries/: Pin.hpp
Project/aris/: APB.hpp  EEPROM.hpp  GPIO.hpp  SYS_TIMER.hpp
Project/hardware/: EEPROM_Linker.ld  RAM_Linker.ld  Startup.s
Project/src/: Main.cpp
